login, resgiter, getallUser, MiddleWare

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=8080
-ACCESS_TOKEN = access_token
-REFRESH_TOKEN = refresh_token
+ACCESS_TOKEN_SECRET=access_token
+REFRESH_TOKEN_SECRET=refresh_token
 MONGO_DB_URL=mongodb+srv://hungystt4:pvh20052002@cluster0.gjrfghp.mongodb.net/tmdt-node
 
 
