--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "8.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
